# K8s-health-check

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  READMEv2.md  SECURITY_FIXES.md  build-simple.sh  build.sh  docker-compose.yml  quickstart.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: websocket.py
backend/app/api/routes/: __init__.py  auth.py  cluster.py  deployments.py  health.py  namespaces.py  nodes.py  pods.py  services.py  users.py
backend/app/collectors/: __init__.py  base.py  deployment_collector.py  namespace_collector.py  node_collector.py  pod_collector.py  service_collector.py
backend/app/models/: __init__.py  auth.py  metrics.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: auth_service.py  cache.py  database.py  k8s_client.py  metrics_service.py
backend/scripts/: create_admin.py
deploy/k8s/: manifests.yml
deploy/mysql/: Dockerfile  init.sql
deploy/redis/: Dockerfile
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  cluster.ts  deployment.ts  index.ts  namespace.ts  node.ts  pod.ts  service.ts  user.ts
frontend/src/components/: Breadcrumb.vue  NodeDetail.vue
frontend/src/router/: index.ts
frontend/src/stores/: cluster.ts  namespace.ts  node.ts  service.ts
frontend/src/utils/: index.ts
frontend/src/views/: Audit.vue  CommonList.vue  Dashboard.vue  Deployments.vue  (+15 more)
(+2 files in other folders)
